kubernetes/overlays/prod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: frontend-prod
  labels:
    environment: production
    pod-security.kubernetes.io/enforce: privileged
    # pod-security.kubernetes.io/enforce: restricted
